<?xml version="1.0" encoding="utf-8"?>
<!-- Settings -> Home Screen -> Reset Home Screen's confirmation. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scrim_strong">

    <LinearLayout
        android:id="@+id/reset_panel"
        android:layout_width="@dimen/action_sheet_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/space_3">

        <TextView
            android:id="@+id/reset_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_confirm_title"
            android:textAppearance="@style/TextAppearance.Mango.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_1"
            android:text="@string/reset_confirm_body"
            android:textAppearance="@style/TextAppearance.Mango.Body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/space_3"
            android:orientation="horizontal">

            <tv.mango.app.ui.core.MangoButton
                android:id="@+id/reset_cancel"
                style="@style/Widget.Mango.Button"
                android:text="@string/action_cancel" />

            <tv.mango.app.ui.core.MangoButton
                android:id="@+id/reset_confirm"
                style="@style/Widget.Mango.Button"
                android:layout_marginStart="@dimen/space_2"
                android:text="@string/action_reset" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
