<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/safe_area_horizontal"
    android:paddingTop="@dimen/safe_area_vertical"
    android:paddingEnd="@dimen/safe_area_horizontal"
    android:paddingBottom="@dimen/safe_area_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textAppearance="@style/TextAppearance.Mango.Title" />

        <EditText
            android:id="@+id/search_field"
            android:layout_width="@dimen/search_field_max_width"
            android:layout_height="@dimen/search_field_height"
            android:layout_marginTop="@dimen/space_3"
            android:background="@drawable/search_field_background"
            android:contentDescription="@string/cd_search_field"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/space_2"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/space_3"
            android:paddingEnd="@dimen/space_3"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.Mango.Body"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_tertiary" />

        <LinearLayout
            android:id="@+id/search_recent_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_recent_label"
                android:textAppearance="@style/TextAppearance.Mango.Overline" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:clipToPadding="false"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/search_recent_chips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />

            </HorizontalScrollView>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_4"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:visibility="gone"
                tools:listitem="@layout/item_media_card" />

            <ProgressBar
                android:id="@+id/search_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginTop="@dimen/space_4"
                android:indeterminateTint="@color/accent"
                android:visibility="gone" />

            <tv.mango.app.ui.common.MessageView
                android:id="@+id/search_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>
